--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,12 @@
 [*]
 charset = utf-8
 end_of_line = lf
-indent_size = 4
+indent_size = 2
 indent_style = space
 insert_final_newline = false
 max_line_length = 120
-tab_width = 4
-ij_continuation_indent_size = 8
+tab_width = 2
+ij_continuation_indent_size = 4
 ij_formatter_off_tag = @formatter:off
 ij_formatter_on_tag = @formatter:on
 ij_formatter_tags_enabled = false
@@ -304,7 +304,7 @@ ij_javascript_align_multiline_binary_operation = false
 ij_javascript_align_multiline_chained_methods = false
 ij_javascript_align_multiline_extends_list = false
 ij_javascript_align_multiline_for = true
-ij_javascript_align_multiline_parameters = true
+ij_javascript_align_multiline_parameters = false
 ij_javascript_align_multiline_parameters_in_calls = false
 ij_javascript_align_multiline_ternary_operation = false
 ij_javascript_align_object_properties = 0
