--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smekalka",
+  "name": "simpozio",
   "version": "1.0.0",
   "main": "packages/app/index.js",
   "license": "MIT",
@@ -9,18 +9,19 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@storybook/addon-actions": "^6.0.21",
-    "@storybook/addon-essentials": "^6.0.21",
-    "@storybook/addon-links": "^6.0.21",
-    "@storybook/web-components": "^6.0.21",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "jest": "^26.4.2",
-    "lit-html": "^1.3.0",
-    "react-is": "^16.13.1"
+    "eslint": "^7.9.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.0.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "jest": "^26.4.2"
   },
   "scripts": {
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
     "test": "lerna run test --stream"
   },
   "dependencies": {
