--- a/packages/storefront/package.json
+++ b/packages/storefront/package.json
@@ -23,7 +23,8 @@
     "url": "https://github.com/smekalka/design-system/issues"
   },
   "dependencies": {
-    "@simpozio/share": "^0.1.2"
+    "@simpozio/share": "^0.1.2",
+    "@simpozio/youtube-playlist": "^0.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
