--- a/packages/youtube-playlist/package.json
+++ b/packages/youtube-playlist/package.json
@@ -21,5 +21,6 @@
   },
   "bugs": {
     "url": "https://github.com/smekalka/design-system/issues"
-  }
+  },
+  "gitHead": "5b8682c71c452c8d0f69cbca597ce2a311d956b6"
 }
